<resources>
    <string name="app_name">IndiaPoliticalEdge</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_pwd_title">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="forgot_pwd"><u>Forgot Password?</u></string>
    <string name="enter_phone_number">Enter User Name</string>
    <string name="new_user_signup">New User? <u>SignUp</u></string>
    <string name="add_new_mla">Add New MLA</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="subscription_fees">Subscription Fees</string>
    <string name="update_subscription">Update MLAs Subscription</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="candidate_profile">Voter Profile</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string-array name="states">
        <item>Telangana</item>
        <item>Andra Pradesh</item>
    </string-array>
    <string-array name="mlas_array">
        <item>Malla Reddy(10-12-2020 - 10-12-2027)</item>
        <item>Harish Rao(10-12-2020 - 10-12-2027)</item>
        <item>Ravindra Naik(10-12-2021 - 10-12-2028)</item>
        <item>Etala Rajendar(10-12-2021 - 10-12-2028)</item>
    </string-array>
    <string-array name="districts">
        <item>Ranga Reddy</item>
        <item>Nalgonda</item>
        <item>Hyderabad</item>
        <item>Warangal</item>
    </string-array>
    <string-array name="mandals">
        <item>Amberpet</item>
        <item>Bandlaguda</item>
        <item>Himayathnagar</item>
        <item>Chityala</item>
        <item>Chandur</item>
        <item>Narketpalle</item>
        <item>Balapur</item>
        <item>Maheshwaram</item>
        <item>Saroornagar</item>

        <item>Khanapur</item>
        <item>Nekkonda</item>
        <item>Saroornagar</item>
    </string-array>
    <string-array name="language_array">
        <item>English</item>
        <item>Telugu</item>
    </string-array>
    <string-array name="constituencies">
        <item>Amberpet</item>
        <item>Khairatabad</item>
        <item>Devarakonda</item>
        <item>Miryalaguda</item>
        <item>Nalgonda</item>
        <item>Warangal West</item>
        <item>Warangal East</item>
        <item>Waradhanapet</item>
    </string-array>
    <string name="opinion">Opinion</string>
    <string name="opinion_hint">Enter Opinion</string>
    <string name="constituency_details">Constituency Details</string>
    <string name="update">Update</string>
    <string name="super_admin">Super Admin</string>
    <string name="admin">Admin</string>
    <string name="candidate">Voter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enter_donation">Enter Donation Amount</string>
    <string name="enter_purpose">Enter Donation Purpose</string>
    <string name="name">Name</string>
    <string-array name="testimonial_array">
        <item>Select Testimonial</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="state_enter">Please enter State</string>
    <string name="country_enter">Please enter Country</string>
    <string name="city_enter">Please enter City</string>
    <string name="testimonial_enter">Please enter Testimonial</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="notice_board_messages">Notice Board Messages</string>
    <string name="manage_candidates">Manage Voters</string>
    <string name="constituency_map">Constituency Map</string>
    <string name="constituency_development">Constituency Developments</string>
    <string name="manage_development">Manage Developments</string>
    <string name="upload_manifesto">Upload Manifest File</string>
    <string name="upload_av">Upload AV</string>
    <string name="view_candidate_donates">View Voter Donates</string>
    <string name="constituency_issues">Constituency Issues</string>
    <string name="view_candiates_rating">View Voters Rating</string>
    <string name="latest_news">Latest News</string>
    <string name="opinion_polling">Opinion Polling</string>
    <string name="upload_image_av">Upload Images &amp; AVs</string>
    <string name="upload_images">Upload Images/Photos</string>
    <string name="testimonials">Testimonials</string>
    <string name="social_media_reviews">Social Media Reviews</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_password_info">Change Password</string>
    <string name="logout">Logout</string>
    <string name="candidate_profile_info">Voter Profile</string>
    <string name="candidate_constituency_map">Constituency Map</string>
    <string name="candidate_constituency_development">Constituency Developments</string>
    <string name="candidate_upload_av">Upload AV</string>
    <string name="candidate_donates">Voter Donates</string>
    <string name="candidate_constituency_issues">Constituency Issues</string>
    <string name="constituency_leader_rating">Constituency Leader Rating</string>
    <string name="candidate_latest_news">Latest News</string>
    <string name="candidate_opinion_polling">Opinion Polling</string>
    <string name="candidate_upload_images">Upload Images/Photos</string>
    <string name="candidate_testimonials">Testimonials</string>
    <string name="candidate_social_media_reviews">Social Media Reviews</string>
    <string name="candidate_contact_us">Contact Us</string>
    <string name="candidate_change_password">Change Password</string>
    <string name="candidate_logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">mobileNumber</string>
    <string name="select_state">Select State </string>
    <string name="select_district">Select District</string>
    <string name="select_constituency">Select Constituency</string>
    <string name="education">Education</string>
    <string name="mandal_name">Mandal Name</string>
    <string name="village_name">Village Name</string>
    <string name="birth_place">Birth Place</string>
    <string name="voter_id">Voter ID Number</string>
    <string name="submit">Submit</string>
    <string name="candidate_av_upload">Voters Upload a Audio/Video file (formats like .mp4)</string>
    <string name="click_upload">Click here to Upload</string>
    <string name="mla_name">MLA Name</string>
    <string name="party_name">Party Name</string>
    <string name="mla_mobile_number">MLA Mobile Number</string>
    <string name="amount_for_donation">Enter Amount for Donation</string>
    <string name="donation_purpose">Donation Purpose</string>
    <string name="donation_amount">Donation Amount</string>
    <string name="donation_date">Donated Date</string>
    <string name="no_donation_data">There is no Donations data. Please donate some Amount to Your\'s Leader.</string>
    <string name="total_donation_amount">Total Candidates Donation Amount</string>
    <string name="tell_your_opinions">Tell Your Opinion</string>
    <string name="agree">Agree</string>
    <string name="dis_agree">DisAgree</string>
    <string name="membership_profile">Membership Profile</string>
    <string name="candidate_manifesto">Manifesto</string>
    <string name="my_images">My Images</string>
    <string name="my_videos">My Videos</string>
    <string name="constituency_images">Constituency Gallery/Images</string>
    <string name="constituency_videos">Constituency Videos</string>
    <string name="no_candidate_rating_data">There is no User Ratings data. Please give some Rating to Your\'s Leader.</string>
    <string name="candidate_photo_upload">Voters Upload a Photo/Image file (formats like .jpg, .png)</string>
    <string name="raise_your_issue">Raise your Issues</string>
    <string name="pls_raise_your_issue">Please raise your Issue</string>
    <string name="enter_mandal_name">Enter Mandal Name</string>
    <string name="enter_village_name">Enter Village Name</string>
    <string name="enter_sarpanch_name">Enter Sarpanch Name</string>
    <string name="enter_sarpanch_mobile">Enter Sarpanch Mobile Number</string>
    <string name="update_raise_your_issue">Update Raise your Issues</string>
    <string name="add_new_candidate">Add a New Voter</string>
    <string name="no_candidates_data">There is no Voter data</string>
    <string name="upload_candidates">Upload All Voters Data file (formats .xlsx)</string>
    <string name="constituency_department">Select Constituency Department</string>
    <string name="select_past_year">Select Past Year</string>
    <string name="mandal_village_name">Mandal name or Village name</string>
    <string name="pls_enter_amount">Please enter Amount</string>
    <string name="past_development">Please describe Past development</string>
    <string name="select_new_year">Select New Year</string>
    <string name="current_development">Please describe Current development</string>
    <string name="any_remarks">Please enter any Remarks</string>
    <string name="news_title">Please enter News Title</string>
    <string name="news_description">Please enter News Description</string>
    <string name="news_upload_file">Click here to Upload a file (formats like .jpg, .png)</string>
    <string name="constituency_name">Constituency Name</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="add_your_opinion">Add Your Opinion</string>
    <string name="pls_mandal_name">Please enter Mandal Name</string>
    <string name="pls_village_name">Please enter Village Name</string>
    <string name="opinion_for_candidates">Please enter opinion for Voters Polling</string>
    <string name="select_year">Select Year</string>
    <string name="select_constituency_department">Select Constituency Development Department</string>
    <string name="no_constituency_department_data">There is no Constituency Departments Development data</string>
    <string name="add_latest_news">Add Latest News</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="reply_to_issues">Your replies to Issues</string>
    <string name="issue_reply">Please enter Issue replys</string>
    <string name="reply">Replys</string>
    <string name="created_date">Created Dates</string>
    <string name="no_issues_replies">There is no Issues Replies datas</string>
    <string name="add_new_constituency_dev">Add a New Constituency Department Development</string>
    <string name="department_name">Department Name</string>
    <string name="year">Year</string>
    <string name="mandal_or_village_name">Mandal/Village Name</string>
    <string name="description">Description</string>
    <string name="work_amount">Work Amount</string>
    <string name="current_year">Current Year</string>
    <string name="remarks">Remarks</string>
    <string name="added_date">Added Date</string>
    <string name="action">Action</string>
    <string name="no_department_development_data">There is no Constituency Departments Development data</string>
    <string name="add_new_issue">Add New Issue</string>
    <string name="issues">Issues</string>
    <string name="sarpanch_name">Sarpanch Name</string>
    <string name="manage_voters">Manage Voters</string>
    <string name="select_mandal">Select Mandal</string>
    <string name="select_language">Select Language</string>
    <string name="booth_level_managment">Booth Level Management</string>
    <string name="pool_managment">Poll Management</string>
</resources>