<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/admin_btn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/super_admin_btn"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_semi_curved"
        android:gravity="center"
        android:text="@string/super_admin"
        android:textColor="@color/white" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/super_admin_btn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_semi_curved"
        android:gravity="center"
        android:text="@string/admin"
        android:textColor="@color/white" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/candidate_btn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/super_admin_btn"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_semi_curved"
        android:gravity="center"
        android:text="@string/candidate"
        android:textColor="@color/white" />

</RelativeLayout>