<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">


    <TextView
        android:id="@+id/change_pwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/change_pwd_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/change_pwd_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_8sdp">

            <EditText
                android:id="@+id/current_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_semi_curved_grey"
                android:hint="@string/current_password"
                android:paddingStart="@dimen/_6sdp"
                android:visibility="visible"
                android:textColor="@color/black"
                android:textColorHint="@color/greyTeal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/new_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_semi_curved_grey"
                android:hint="@string/new_password"
                android:paddingStart="@dimen/_6sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/greyTeal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_pwd_edit" />

            <EditText
                android:id="@+id/confirm_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_semi_curved_grey"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/greyTeal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_pwd_edit" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_btn"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_semi_curved"
                android:text="@string/submit"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_pwd_edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>