<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <include-->
        <!--            android:id="@+id/custom_title_view"-->
        <!--            layout="@layout/custom_title_bar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="?attr/actionBarSize" />-->

        <androidx.cardview.widget.CardView
            android:id="@+id/add_new_mla_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/_8sdp">

                <EditText
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_6sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:hint="@string/last_name"
                    android:paddingStart="@dimen/_6sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_et" />


                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:hint="@string/enter_phone_number"
                    android:inputType="number"
                    android:paddingStart="@dimen/_6sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_et" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/state_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:hint="@string/select_state"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/phone_number"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_divider_color="@color/greyTeal"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_array="@array/states"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/greyTeal"
                    app:spinner_popup_elevation="14dp" />


                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/district_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:hint="@string/select_district"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/state_drop_down"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_divider_color="@color/greyTeal"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_array="@array/states"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/greyTeal"
                    app:spinner_popup_elevation="14dp" />


                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/mandal_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:hint="@string/select_mandal"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/district_drop_down"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_divider_color="@color/greyTeal"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_array="@array/states"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/greyTeal"
                    app:spinner_popup_elevation="14dp" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/constituency_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:hint="@string/select_constituency"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/district_drop_down"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_divider_color="@color/greyTeal"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_array="@array/states"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/greyTeal"
                    app:spinner_popup_elevation="14dp" />


                <EditText
                    android:id="@+id/party_edit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:hint="@string/birth_place"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constituency_drop_down" />


                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:drawableEnd="@drawable/date_logo"
                    android:hint="@string/date_of_birth"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/party_edit" />

                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:drawableEnd="@drawable/date_logo"
                    android:hint="@string/end_date"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/party_edit" />

                <EditText
                    android:id="@+id/voter_id_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:hint="@string/voter_id"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_date" />


                <EditText
                    android:id="@+id/short_desc_edit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:hint="Short Description"
                    android:inputType="text"
                    android:paddingStart="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greyTeal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/voter_id_number" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/language_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/bg_semi_curved_grey"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:hint="@string/select_language"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/short_desc_edit"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_divider_color="@color/greyTeal"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_array="@array/languages"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/greyTeal"
                    app:spinner_popup_elevation="14dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit_btn"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="?bg_background"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/language_drop_down" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>